2006-03-29  Lluis Sanchez Gual  <lluis@novell.com> 

	* libstetic/ImageInfo.cs: Don't crash if an icon is not
	  found in the current theme.

2006-03-22  Lluis Sanchez Gual  <lluis@novell.com> 

	* libsteticui/WidgetTreeCombo.cs: A combo that shows the
	  tree of widgets of a window.
	* libsteticui/WidgetPropertyTree.cs:
	* libsteticui/PropertyTree.cs: A TreeView based property
	  editor.
	* libsteticui/WidgetActionBar.cs: A toolbar that shows
	  the tree of widgets on a combo and some commands
	  available for the selected widget.
	* libsteticui/Project.cs: Replaced the Selected event by
	  SelectionChanged, which uses a standard signature
	  for event handlers.
	* libsteticui/PropertyGrid.cs: 
	  Track changes in the widget selected event.
	* libsteticui/PropertyEditor.cs: Moved most of code to
	  PropertyEditorCell.
	* libsteticui/Palette.cs: Show windows before widgets, since
	  windows are the first thing an user is going to create.
	* libsteticui/ProjectView.cs: Track changes in the widget 
	  selected event. Added WidgetActivated event.
	* libsteticui/SignalsEditor.cs: Make columns resizable.
	  Track changes in the widget selected event.
	  
	* libsteticui/ContextMenu.cs: Show the Delete command for
	  placeholders. Delete placeholders through their container.
	  
	* libsteticui/Makefile.am: Updated.
	
	* libstetic/PropertyEditorCell.cs: New file. Implements the base
	  class for property editors that need custom rendering.
	* libstetic/IProject.cs: Added SelectionChanged event.
	* libstetic/ItemDescriptor.cs: HasDependencies now returns true
	  if there are visibility dependencies, not only sensitivity.
	* libstetic/stetic.glade: Added text editor dialog.
	
	* libstetic/wrapper/Button.cs: Added null check.
	* libstetic/wrapper/Container.cs: When the last placeholder of
	  a container is delete, delete the container.
	* libstetic/wrapper/Paned.cs: Don't allow deleting placeholders.
	* libstetic/wrapper/Box.cs: Removed AllowPlaceholders override,